<resources>
    <string name="app_name">FilterFiesta</string>
    <string name="action_settings">Settings</string>
    <string name="privacy_policy_url">https://filterfiesta-privacy-policy.aqchen.com/</string>

    <!-- Strings used for Login Fragment -->
    <string name="login_title">Login</string>
    <string name="login_subtitle">Welcome back!</string>
    <string name="login_submit_label">Login</string>
    <string name="login_successful">Logged-in!</string>
    <string name="login_failed">Failed to login</string>
    <string name="login_no_account_question">Don\'t have an account? Sign Up Now</string>
    <string name="login_signup_action_text">Sign Up Now</string>
    <string name="login_forgot_password_question">Forgot your password? Click Here to Reset</string>
    <string name="login_password_action_text">Click Here to Reset</string>

    <!-- Strings used for Register Fragment -->
    <string name="register_title">Sign Up</string>
    <string name="register_subtitle">Create an account</string>
    <string name="register_submit_label">Sign Up</string>
    <string name="register_repeat_password_input_hint">Confirm password</string>
    <string name="register_accept_terms_label">Accept Privacy Policy</string>
    <string name="register_successful">Created an account!</string>
    <string name="register_failed">Failed to register</string>
    <string name="register_privacy_policy_notice">By creating an account, you agree to our Privacy Policy</string>
    <string name="register_privacy_policy_action_text">Privacy Policy</string>

    <!-- Strings used for Password Reset Fragment -->
    <string name="password_reset_title">Reset Password</string>
    <string name="password_reset_subtitle">Enter the email associated with your account and we\'ll send instructions on how to reset your password.</string>
    <string name="password_reset_submit_label">Submit</string>
    <string name="password_reset_email_sent">An email has successfully been sent to reset your password!</string>

    <!-- Strings used for Login and Register Fragment -->
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>

    <!-- Home Fragment -->
    <string name="select_roll_submit_label">Choose from Photos</string>
    <string name="select_camera_submit_label">Use Camera</string>
    <string name="home_title">Hello!</string>
    <string name="home_subtitle">Pick an option to begin editing</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Filter Group View Holder -->
    <string name="filter_group_image_content_description">Filter Group</string>

    <!-- Photo Editor Fragment -->
    <string name="photo_editor_cancel_button_label">Exit</string>
    <string name="photo_editor_save_button_label">Save</string>

    <!-- Tool Pager Fragment -->
    <string name="tool_pages_get_failure">Failed to get tool pages</string>

    <!-- Create Custom Filter Fragment -->
    <string name="create_custom_filter_title">New Custom Filter</string>
    <string name="create_custom_filter_name_hint">Custom filter name</string>
    <string name="create_custom_filter_create_button_label">Create</string>
    <string name="create_custom_filter_error">Failed to create new custom filter</string>
    <string name="create_custom_filter_success">Created new custom filter!</string>

    <!-- Photo Editor Menu -->
    <string name="photo_editor_menu_settings_label">Settings</string>
    <string name="photo_editor_menu_create_custom_filter_label">New Custom Filter</string>
    <string name="photo_editor_menu_manage_custom_filters_label">Manage Custom Filters</string>
    <string name="photo_editor_menu_manage_filters_label">Manage Filters</string>

    <!-- Custom Filters Details List Fragment -->
    <string name="custom_filters_details_list_description">%1$d filters</string>

    <!-- Custom Filter Details Fragment -->
    <string name="custom_filter_details_filters_label">Filters</string>
    <string name="custom_filter_details_container_transition_name">custom_filter_details_container_transition</string>

    <!-- Custom Filters Details List Menu -->
    <string name="custom_filters_details_list_menu_edit_label">Edit</string>

    <!-- Custom Filter Details Menu -->
    <string name="custom_filter_details_menu_edit_label">Edit details</string>
    <string name="custom_filter_details_menu_delete_label">Delete custom filter</string>

    <!-- Edit Custom Filter Details Fragment -->
    <string name="edit_custom_filter_details_title">Edit Custom Filter</string>
    <string name="edit_custom_filter_details_edit_button_label">Save</string>
    <string name="edit_custom_filter_error">Failed to save changes</string>
    <string name="edit_custom_filter_success">Saved changes</string>

    <!-- Photo Editor Image Preview Fragment -->
    <string name="photo_editor_image_preview_content_description">Image Preview</string>
    <string name="photo_editor_image_preview_container_transition_name">photo_editor_image_preview_container_transition</string>

    <!-- Edit Parameters Fragment -->
    <string name="edit_parameters_cancel_button_label">Cancel</string>
    <string name="edit_parameters_save_button_label">Apply</string>

    <!-- Save Bottom Sheet -->
    <string name="bottom_sheet_save_image_section_title">Save Image</string>
    <string name="bottom_sheet_save_button_label">Save</string>
    <string name="bottom_sheet_share_button_label">Share</string>
    <string name="bottom_sheet_save_custom_filter_section_title">Save as Custom Filter</string>

    <!-- Filter List View Holder -->
    <string name="filter_list_drag_image_content_description">Drag to reorder filters, swipe to edit or delete</string>

    <!-- Home Menu -->
    <string name="home_menu_sign_out_label">Sign out</string>

    <!-- Photo Editor Exit Confirmation Dialog -->
    <string name="dialog_confirm_exit_title">Exit editor?</string>
    <string name="dialog_confirm_exit_description">Any unsaved changes will be lost.</string>
    <string name="dialog_confirm_exit_negative_label">Cancel</string>
    <string name="dialog_confirm_exit_positive_label">Exit</string>
</resources>