<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/md_sm_margin">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title_font_size"
                android:textColor="?attr/colorPrimary"
                android:text="@string/register_title" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sm_margin"
                android:textSize="@dimen/text_subtitle_font_size"
                android:text="@string/register_subtitle" />
            <!-- Email input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_repeat_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_repeat_password_input_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_repeat_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Accept Terms input -->
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/register_terms_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_accept_terms_label" />

            <!-- Sign Up Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/sm_margin"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_submit_label" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>