<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aqchen.filterfiesta.ui.auth.passwordreset.PasswordResetFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="@dimen/sm_margin"
        android:layout_marginBottom="@dimen/sm_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <!-- Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/password_reset_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reset_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_title_font_size"
            app:layout_constraintBottom_toTopOf="@id/password_reset_email_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Subtitle -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/password_reset_subtitle"
            app:layout_constraintTop_toBottomOf="@id/password_reset_title"
            app:layout_constraintBottom_toTopOf="@id/password_reset_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sm_margin"
            android:textSize="@dimen/text_small_subtitle_font_size"
            android:text="@string/password_reset_subtitle" />

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_reset_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_reset_subtitle"
            app:layout_constraintBottom_toTopOf="@id/password_reset_submit_button"
            android:hint="@string/email_input_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reset_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Submit Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/password_reset_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="@dimen/sm_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_reset_email_layout"
            android:text="@string/password_reset_submit_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
