<?xml version="1.0" encoding="utf-8"?>
<!--  https://github.com/material-components/material-components-android/issues/1420 -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionGroup="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aqchen.filterfiesta.ui.photo_editor.custom_filters.edit_details.EditCustomFilterDetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="@dimen/sm_margin"
        android:layout_marginBottom="@dimen/sm_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edit_custom_filter_details_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_custom_filter_details_name_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_custom_filter_details_title"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Custom filter name input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_custom_filter_details_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_custom_filter_details_title"
            app:layout_constraintBottom_toTopOf="@id/edit_custom_filter_details_submit_button"
            android:hint="@string/create_custom_filter_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_custom_filter_details_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Create Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_custom_filter_details_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_custom_filter_details_edit_button_label"
            android:layout_marginVertical="@dimen/sm_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_custom_filter_details_name_input_layout"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
