<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aqchen.filterfiesta.ui.photo_editor.save_modal_bottom_sheet.SaveModalBottomSheetFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Drag handle for accessibility -->
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottom_sheet_save_drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bottom_sheet_save_title_text_view"
        android:textSize="@dimen/text_small_subtitle_font_size"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_save_image_section_title"
        android:layout_marginHorizontal="@dimen/sm_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_save_drag_handle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_save_button"
        app:icon="@drawable/baseline_save_alt_70"
        style="@style/Widget.Material3.Button.Icon"
        android:text="@string/bottom_sheet_save_button_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sm_margin"
        android:layout_marginEnd="@dimen/xxs_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_save_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bottom_sheet_share_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_share_button"
        app:icon="@drawable/baseline_share_70"
        style="@style/Widget.Material3.Button.Icon"
        android:text="@string/bottom_sheet_share_button_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xxs_margin"
        android:layout_marginEnd="@dimen/sm_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_save_title_text_view"
        app:layout_constraintStart_toEndOf="@id/bottom_sheet_save_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_sheet_save_image_buttons_bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="bottom_sheet_save_button,bottom_sheet_share_button" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bottom_sheet_save_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:showAnimationBehavior="outward"
        app:hideAnimationBehavior="inward"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_save_drag_handle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/bottom_sheet_save_image_buttons_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/md_sm_margin"
        android:layout_marginHorizontal="@dimen/sm_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_save_image_buttons_bottom_barrier" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bottom_sheet_save_custom_filters_title_text_view"
        android:textSize="@dimen/text_small_subtitle_font_size"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_save_custom_filter_section_title"
        android:layout_marginHorizontal="@dimen/sm_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_save_image_buttons_divider" />

    <com.aqchen.filterfiesta.ui.util.TouchEventInterceptorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/sm_margin"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_save_custom_filters_title_text_view" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_save_custom_filters_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.aqchen.filterfiesta.ui.util.TouchEventInterceptorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
